# bleep-pay

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
admin/: .env.example  README.md  package-lock.json  package.json  server.js
admin/public/: app.js  index.html
migrations/: 001_initial.sql
mobile/: pubspec.yaml
mobile/lib/: main.dart
mobile/lib/core/: api_client.dart  ble_service.dart  ws_client.dart
mobile/lib/screens/: home_screen.dart  login_screen.dart  request_sheet.dart  send_sheet.dart
mobile/lib/state/: auth_provider.dart
src/: db.rs  error.rs  main.rs  state.rs
src/models/: mod.rs
src/routes/: auth.rs  mod.rs  payments.rs  ws.rs
